# wasmbind-example

./: CMakeLists.txt  README.md  package-lock.json  package.json
src/: index.js  main.cpp
